--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Community Enhancer",
+  "name": "Enhancer for Nimbuscloud",
   "version": "1.0",
 
   "description": "Improve the user experience of community.nimbuscloud.at",
